# axum-test

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  docs.sh  makefile  test.sh
.github/: pull_request_template.md
examples/: auth.rs  test.rs
examples/actix-web-todo/: README.md  main.rs
examples/actix-web-websocket-ping-pong/: README.md  main.rs
examples/example-array-contains/: README.md  main.rs
examples/example-graphql-todo/: README.md  main.rs
examples/example-shuttle/: main.rs
examples/example-todo/: Cargo.toml  README.md  main.rs
examples/example-todo/src/: main.rs
examples/example-websocket-chat/: README.md  main.rs
examples/example-websocket-ping-pong/: README.md  main.rs
examples/example-websockets/: README.md  main.rs
examples/example-websockets-chat/: main.rs
examples/example-websockets-ping-pong/: main.rs
examples/server-side-events/: main.rs
examples/snapshots/: README.md  main.rs
examples/snapshots/snapshots/: example_snapshots__test_response_snapshots__it_should_save_yaml_snapshots.snap  snapshots__test_response_snapshots__it_should_save_binary_snapshots.snap  snapshots__test_response_snapshots__it_should_save_binary_snapshots.snap.new  snapshots__test_response_snapshots__it_should_save_json_snapshots.snap  snapshots__test_response_snapshots__it_should_save_json_snapshots.snap.new  snapshots__test_response_snapshots__it_should_save_json_snapshots_of_the_body.snap  snapshots__test_response_snapshots__it_should_save_json_snapshots_of_the_body.snap.new  snapshots__test_response_snapshots__it_should_save_yaml_snapshots.snap.new  snapshots__test_response_snapshots__it_should_save_yaml_snapshots_of_the_body.snap  snapshots__test_response_snapshots__it_should_save_yaml_snapshots_of_the_body.snap.new
examples/todo/: README.md  main.rs
examples/websocket-chat/: README.md  main.rs
examples/websocket-ping-pong/: README.md  main.rs
files/: example.json  example.yaml
src/: expect_json.rs  into_test_server_core.rs  into_test_server_thread.rs  lib.rs  random_socket_address.rs  test_client.rs  test_request.rs  test_request_future.rs  test_reqwest_client.rs  test_response.rs  test_server.rs  test_server_builder.rs  test_server_config.rs  test_server_config_builder.rs  test_server_transport.rs  test_web_socket.rs  transport.rs
src/internals/: debug_response_body.rs  error_message.rs  error_message_formatter.rs  expected_state.rs  format_status_code.rs  format_status_code_range.rs  mod.rs  query_params_store.rs  request_path_formatter.rs  result_ext.rs  starting_tcp_setup.rs  status_code_formatter.rs  status_code_range_formatter.rs  try_into_range_bounds.rs  uri2.rs  with_this_mut.rs
src/internals/body_fmt/: body_bytes_fmt.rs  body_fmt.rs  body_fmt_kind.rs  body_json_fmt.rs  body_msgpack_fmt.rs  body_text_fmt.rs  body_yaml_fmt.rs  mod.rs
src/internals/cookies/: atomic_cross_cookie_jar.rs  cross_cookie_jar.rs  mod.rs
src/internals/transport_layer/: actix_web_mock_transport_layer.rs  axum_mock_transport_layer.rs  http_transport_layer.rs  mock_transport_layer.rs  mod.rs  transport_layer.rs
src/internals/websockets/: mod.rs  test_response_websocket.rs  ws_key_generator.rs
src/multipart/: mod.rs  multipart_form.rs  part.rs
src/test_request/: internal_base_request.rs  test_request_config.rs  test_request_details.rs
src/test_server/: inner_mock_server.rs  inner_server.rs  inner_test_server.rs  inner_web_server.rs  server_shared_state.rs
src/testing/: assert_error_message.rs  catch_panic_error_message.rs  expect_json_ops.rs  mod.rs  strip_ansi_codes.rs
src/transport/: into_http_transport_layer.rs  into_mock_transport_layer.rs  mod.rs
src/transport_layer/: into_http_transport_layer.rs  into_mock_transport_layer.rs  into_transport_layer.rs  mod.rs  transport_layer.rs  transport_layer_builder.rs  transport_layer_type.rs
src/transport_layer/into_transport_layer/: actix_web_app.rs  axum_service.rs  into_make_service.rs  into_make_service_with_connect_info.rs  router.rs  serve.rs  shuttle_axum.rs  with_graceful_shutdown.rs
src/util/: mod.rs  mutex_utils.rs  new_random_port.rs  new_random_socket_addr.rs  new_random_tcp_listener.rs  new_random_tokio_tcp_listener.rs  reserved_port.rs  reserved_socket_addr.rs  serve_handle.rs  spawn_serve.rs  uri.rs
src/util/safe_send/: mod.rs  safe_send.rs  safe_send_builder.rs
tests/: test-actix-web.rs  test-expect-json-integration.rs  test-transport-http.rs
