[package]
name = "axum-test"
authors = ["Joseph Lenton <josephlenton@gmail.com>"]
version = "18.5.0"
rust-version = "1.85"
edition = "2024"
license = "MIT"
description = "For spinning up and testing Axum servers"
keywords = ["testing", "test", "axum"]
categories = ["web-programming::http-server", "development-tools::testing"]
repository = "https://github.com/JosephLenton/axum-test"
documentation = "https://docs.rs/axum-test"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "example-shuttle"
path = "examples/example-shuttle/main.rs"
required-features = ["shuttle"]

[[example]]
name = "example-websocket-chat"
path = "examples/example-websocket-chat/main.rs"
required-features = ["ws"]

[[example]]
name = "example-websocket-ping-pong"
path = "examples/example-websocket-ping-pong/main.rs"
required-features = ["ws"]

[features]
default = ["pretty-assertions"]

all = ["pretty-assertions", "yaml", "msgpack", "reqwest", "shuttle", "typed-routing", "ws"]

pretty-assertions = ["dep:pretty_assertions"]
yaml = ["dep:serde_yaml"]
msgpack = ["dep:rmp-serde"]
reqwest = ["dep:reqwest"]
shuttle = ["dep:shuttle-axum"]
typed-routing = ["dep:axum-extra"]
ws = ["axum/ws", "tokio/time", "dep:uuid", "dep:base64", "dep:tokio-tungstenite", "dep:futures-util"]

# Deprecated, and will be removed in the future.
old-json-diff = ["dep:assert-json-diff"]

[dependencies]
axum = { version = "0.8.8", features = [] }
anyhow = "1.0"
bytes = "1.11"
bytesize = "2.3.1"
cookie = "0.18"
expect-json = "1.8.1"
http = "1.4.0"
http-body-util = "0.1.3"
hyper-util = { version = "0.1.19", features = ["client", "http1", "client-legacy"] }
hyper = { version = "1.8.1", features = ["http1"] }
mime = "0.3.17"
rust-multipart-rfc7578_2 = "0.8.0"
reserve-port = "2.3.0"
serde = "1.0.228"
serde_json = "1.0.148"
serde_urlencoded = "0.7.1"
smallvec = "1.15.1"
tokio = { version = "1.48.0", features = ["rt"] }
tower = { version = "0.5.2", features = ["util", "make"] }
url = "2.5.7"

# Pretty Assertions
pretty_assertions = { version = "1.4.1", optional = true }

# Yaml
serde_yaml = { version = "0.9.34", optional = true }

# Shuttle
shuttle-axum = { version = "0.57.0", optional = true }

# MsgPack
rmp-serde = { version = "1.3.1", optional = true }

# Typed Routing
axum-extra = { version = "0.12.5", optional = true, features = ["routing", "typed-routing"] }

# WebSockets
uuid = { version = "1.19.0", optional = true, features = ["v4"]}
base64 = { version = "0.22.1", optional = true }
futures-util = { version = "0.3.31", optional = true }
tokio-tungstenite = { version = "0.28.0", optional = true }

# Reqwest
reqwest = { version = "0.12.28", optional = true, features = ["cookies", "json", "stream", "multipart", "rustls-tls"] }

# Old Json Diff
assert-json-diff = { version = "2.0.2", optional = true }

[dev-dependencies]
axum = { version = "0.8.8", features = ["multipart", "tokio", "ws"] }
axum-extra = { version = "0.12.5", features = ["cookie", "typed-routing", "query"] }
axum-msgpack = "0.5.0"
axum-yaml = "0.5.0"
futures-util = "0.3.31"
local-ip-address = "0.6.8"
rand = { version = "0.9.2", features = ["small_rng"] }
regex = "1.12.2"
serde-email = { version = "3.2.0", features = ["serde"] }
shuttle-axum = "0.57.0"
shuttle-runtime = "0.57.0"
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "sync", "time", "macros"] }
tower-http = { version = "0.6.8", features = ["normalize-path"] }
