[package]
name = "axum-test"
authors = ["Joseph Lenton <josephlenton@gmail.com>"]
version = "20.0.0"
rust-version = "1.85"
edition = "2024"
license = "MIT"
description = "Easy E2E testing for Axum"
keywords = ["testing", "test", "axum"]
categories = ["web-programming::http-server", "development-tools::testing"]
repository = "https://github.com/JosephLenton/axum-test"
documentation = "https://docs.rs/axum-test"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "actix-web-todo"
path = "examples/actix-web-todo/main.rs"
required-features = ["actix-web"]

[[example]]
name = "actix-web-websocket-ping-pong"
path = "examples/actix-web-websocket-ping-pong/main.rs"
required-features = ["actix-web", "ws"]

[[example]]
name = "snapshots"
path = "examples/snapshots/main.rs"

[[example]]
name = "todo"
path = "examples/todo/main.rs"

[[example]]
name = "websocket-chat"
path = "examples/websocket-chat/main.rs"
required-features = ["ws"]

[[example]]
name = "websocket-ping-pong"
path = "examples/websocket-ping-pong/main.rs"
required-features = ["ws"]

[features]
default = ["pretty-assertions"]

all = ["pretty-assertions", "yaml", "msgpack", "reqwest", "typed-routing", "ws", "actix-web"]

actix-web = ["dep:actix-web"]
pretty-assertions = ["dep:pretty_assertions"]
yaml = ["dep:serde_yaml"]
msgpack = ["dep:rmp-serde"]
reqwest = ["dep:reqwest"]
typed-routing = ["dep:axum-extra"]
ws = ["axum/ws", "tokio/time", "dep:uuid", "dep:base64", "dep:tokio-tungstenite", "dep:futures-util"]

[dependencies]
axum = { version = "0.8.8", features = [] }
anyhow = "1.0.102"
bytes = "1.11.1"
bytesize = "2.3.1"
cookie = "0.18.1"
expect-json = "1.10.1"
http = "1.4.0"
http-body-util = "0.1.3"
hyper-util = { version = "0.1.20", features = ["client", "http1", "client-legacy"] }
hyper = { version = "1.8.1", features = ["http1"] }
mime = "0.3.17"
rust-multipart-rfc7578_2 = "0.9.0"
reserve-port = "2.4.0"
serde = "1.0.228"
serde_json = "1.0.149"
serde_urlencoded = "0.7.1"
tokio = { version = "1.50.0", features = ["rt"] }
tower = { version = "0.5.3", features = ["util", "make"] }
url = "2.5.8"

# Pretty Assertions
pretty_assertions = { version = "1.4.1", optional = true }

# Yaml
serde_yaml = { version = "0.9.34", optional = true }

# MsgPack
rmp-serde = { version = "1.3.1", optional = true }

# Typed Routing
axum-extra = { version = "0.12.5", optional = true, features = ["routing", "typed-routing"] }

# WebSockets
uuid = { version = "1.21.0", optional = true, features = ["v4"]}
base64 = { version = "0.22.1", optional = true }
futures-util = { version = "0.3.32", optional = true }
tokio-tungstenite = { version = "0.28.0", optional = true }

# Reqwest
reqwest = { version = "0.13.2", optional = true, features = ["cookies", "json", "stream", "multipart"] }

# Actix Web
actix-web = { version = "4.13.0", optional = true }

# Old Json Diff
assert-json-diff = { version = "2.0.2", optional = true }

[dev-dependencies]
axum = { version = "0.8.8", features = ["multipart", "tokio", "ws"] }
axum-extra = { version = "0.12.5", features = ["cookie", "typed-routing", "query"] }
axum-msgpack = "0.5.0"
axum-yaml = "0.5.0"
futures = "0.3.32"
futures-util = "0.3.32"
insta = { version = "1.46.3", features = ["json"] }
rand = "0.10.0"
regex = "1.12.3"
actix-ws = "0.3"
serde-email = { version = "3.2.0", features = ["serde"] }
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "sync", "time", "macros"] }
tower-http = { version = "0.6.8", features = ["normalize-path"] }
