[package]
name = "example-todo"
description = "An example todo application with tests"
authors = ["josephlenton@gmail.com"]
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.69"
axum = "0.6.4"
axum-extra = { vartion = "0.5.0", features = ["cookie"] }
cookie = "0.17.0"
tokio = { version = "1.25.0", features = ["full"] }
serde = { version = "1.0.152", features = ["derive"] }
serde-email = { version = "1.3.0", features = ["serde"] }
serde_json = "1.0"

[dev-dependencies]
axum-test = { path = "./../.." }
