[package]
name = "example-todo"
description = "An example todo application with tests"
authors = ["josephlenton@gmail.com"]
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.69"
axum = "0.6.10"
axum-extra = { vartion = "0.7.0", features = ["cookie"] }
cookie = "0.17.0"
serde = { version = "1.0.152", features = ["derive"] }
serde-email = { version = "1.3.0", features = ["serde"] }
tokio = { version = "1.26.0", features = ["rt", "rt-multi-thread", "macros"] }

[dev-dependencies]
axum-test = { path = "./../.." }
serde_json = "1.0.93"
